src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/NVSampleLocations_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/NVSampleLocations_StringErrorContext.class */
public final class NVSampleLocations_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("nglFramebufferSampleLocationsfvNV(IIIJ)V", "net/labymod/core/laby3d/opengl/error/generated/NVSampleLocationsErrorContext");
        methods.put("glFramebufferSampleLocationsfvNV(IILjava/nio/FloatBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/NVSampleLocationsErrorContext");
        methods.put("nglNamedFramebufferSampleLocationsfvNV(IIIJ)V", "net/labymod/core/laby3d/opengl/error/generated/NVSampleLocationsErrorContext");
        methods.put("glNamedFramebufferSampleLocationsfvNV(IILjava/nio/FloatBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/NVSampleLocationsErrorContext");
        methods.put("glResolveDepthValuesNV()V", "net/labymod/core/laby3d/opengl/error/generated/NVSampleLocationsErrorContext");
        methods.put("glFramebufferSampleLocationsfvNV(II[F)V", "net/labymod/core/laby3d/opengl/error/generated/NVSampleLocationsErrorContext");
        methods.put("glNamedFramebufferSampleLocationsfvNV(II[F)V", "net/labymod/core/laby3d/opengl/error/generated/NVSampleLocationsErrorContext");
        return methods;
    }
}
